[package]
name = "vgrl1337"
authors = ["Kento Oki <hrn832@protonmail.com>"]
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/kkent030315/vgrl1337"
repository = "https://github.com/kkent030315/vgrl1337"
license = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
winapi = { version = "0.3", features = ["libloaderapi", "processthreadsapi"] }
